last changes requested in March

--- a/crypto-back/src/main/resources/static/swagger-ui.html
+++ b/crypto-back/src/main/resources/static/swagger-ui.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>UCrypt API</title>
+    <title>Uranus API</title>
 
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css" rel="stylesheet" type="text/css">
